Fix Submit Opt button text wrapping

--- a/src/routes/game/components/elements/playerInputPopUp/PlayerInputPopUp.module.css
+++ b/src/routes/game/components/elements/playerInputPopUp/PlayerInputPopUp.module.css
@@ -65,6 +65,7 @@
   padding: 8px;
   width: auto;
   margin-bottom: 0.25rem;
+  white-space: nowrap;
 }
 
 .buttonDiv:hover {
